# Otus_bulk_7

./: .gitmodules  CMakeLists.txt  CommandView.h  Context.h  Controller.cpp  Controller.h  Logger.cpp  Logger.h  Model.cpp  Model.h  Observer.h  README.md  Storage.h  a.out  async.cpp  ddd1664742167824  main  main.cpp  tests_.cpp  ytuyt1664742167824
.github/workflows/: bulk.yml
.gitignore/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  awd1664914648174  awd1664915404849  bulk  bulk.sln  bulk.vcxproj  bulk.vcxproj.filters  cmake_install.cmake  ddd1664915417816  dsa1664915397721  dwa1665304593055  tests_  tests_.vcxproj  tests_.vcxproj.filters
.gitignore/Debug/: 21664884509576  311664874589923  31664874581839  aaa1664873227515  awd1664874600799  bulk.ilk  ccc1664873912373  ddd1664873261115  dsfg1664892246741  fdf1664892406444  hh1664891020928  jhk1664891833129  kl1664890957644  q1664875156826  qqq1664873344511  sdf1664892252177  tests_.ilk  джў1664875555639
.gitignore/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
.gitignore/googletest/googlemock/: ALL_BUILD.vcxproj  CTestTestfile.cmake  (+14 more)
(+69 files in other folders)
